--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/swagger": "^11.2.1",
     "@prisma/adapter-mssql": "^6.18.0",
     "@prisma/client": "^6.18.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
